--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -12,5 +12,12 @@
   "dismiss": "닫기",
   "signOut": "로그아웃",
   "pageNotFound": "페이지 찾을 수 없음",
-  "pageNotFoundDesc": "요청하신 페이지를 찾을 수 없습니다."
+  "pageNotFoundDesc": "요청하신 페이지를 찾을 수 없습니다.",
+  "sessionWelcome": "안녕하세요, $1님.",
+  "alreadySignedIn": "이미 $1(으)로 로그인되어 있습니다.",
+  "email": "이메일 주소",
+  "signUpDesc": "아래의 방법 중 하나를 선택하여 계정을 만들 수 있습니다.",
+  "signUpEmail": "이메일로 계정 만들기",
+  "signUpUsing": "$1으로 계정 만들기",
+  "signUpDisclaimer": "이 사이트에 가입하면 null을(를) 동의하게 됩니다."
 }
