Polish minor design/HTML

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -19,5 +19,6 @@
   "signUpDesc": "You can create an account using one of these methods below.",
   "signUpEmail": "Create an account with Email address",
   "signUpUsing": "Create an account with $1",
-  "signUpDisclaimer": "By creating an account, you agree to null."
+  "signUpDisclaimer": "By creating an account, you agree to null.",
+  "done": "Done"
 }
