--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -19,5 +19,6 @@
   "signUpDesc": "아래의 방법 중 하나를 선택하여 계정을 만들 수 있습니다.",
   "signUpEmail": "이메일로 계정 만들기",
   "signUpUsing": "$1으로 계정 만들기",
-  "signUpDisclaimer": "이 사이트에 가입하면 null을(를) 동의하게 됩니다."
+  "signUpDisclaimer": "이 사이트에 가입하면 null을(를) 동의하게 됩니다.",
+  "done": "완료"
 }
