Redesign sign up/sign in page

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -20,5 +20,6 @@
   "signUpEmail": "Create an account with Email address",
   "signUpUsing": "Create an account with $1",
   "signUpDisclaimer": "By creating an account, you agree to null.",
-  "done": "Done"
+  "done": "Done",
+  "signUpOr": "Or..."
 }
