--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -20,5 +20,6 @@
   "signUpEmail": "이메일로 계정 만들기",
   "signUpUsing": "$1으로 계정 만들기",
   "signUpDisclaimer": "이 사이트에 가입하면 null을(를) 동의하게 됩니다.",
-  "done": "완료"
+  "done": "완료",
+  "signUpOr": "또는..."
 }
