Implement post sign up finalizing

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -6,6 +6,7 @@
   "signUp": "Create an account",
   "username": "Username",
   "password": "Password",
+  "signInEmail": "Sign in with Email address",
   "signInUsing": "Sign in with $1",
   "error": "Error",
   "errorDesc": "An error occurred. This might be a network problem, or the server's problem. If the problem persists, please contact us.",
@@ -20,6 +21,7 @@
   "signUpEmail": "Create an account with Email address",
   "signUpUsing": "Create an account with $1",
   "signUpDisclaimer": "By creating an account, you agree to null.",
+  "signUpPostComplete": "Finish creating an account by filling the form below.",
   "done": "Done",
   "signUpOr": "Or...",
   "AUTH_INVALID_USERNAME": "Invalid username",
