--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -6,6 +6,7 @@
   "signUp": "계정 만들기",
   "username": "사용자 이름",
   "password": "비밀번호",
+  "signInEmail": "이메일 주소로 로그인",
   "signInUsing": "$1으로 로그인",
   "error": "오류",
   "errorDesc": "오류가 발생했습니다. 시간이 지나도 문제가 계속 지속된다면 문의해 주세요.",
@@ -17,9 +18,10 @@
   "alreadySignedIn": "이미 $1(으)로 로그인되어 있습니다.",
   "email": "이메일 주소",
   "signUpDesc": "아래의 방법 중 하나를 선택하여 계정을 만들 수 있습니다.",
-  "signUpEmail": "이메일로 계정 만들기",
+  "signUpEmail": "이메일 주소로 계정 만들기",
   "signUpUsing": "$1으로 계정 만들기",
   "signUpDisclaimer": "이 사이트에 가입하면 null을(를) 동의하게 됩니다.",
+  "signUpPostComplete": "아래의 정보를 입력하고 계정 만들기를 끝내주세요.",
   "done": "완료",
   "signUpOr": "또는...",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
