Improve dropdown menu Cover background when menu is open, Use translation files

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -24,6 +24,7 @@
   "signUpPostComplete": "Finish creating an account by filling the form below.",
   "done": "Done",
   "signUpOr": "Or...",
+  "viewProfile": "View profile",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
   "AUTH_USERNAME_POLICY": "Username should only contain alphanumberic characters.",
