Implement editing user profile. Resolves #19.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -5,6 +5,7 @@
   "signIn": "Sign in",
   "signUp": "Create an account",
   "username": "Username",
+  "name": "Name",
   "password": "Password",
   "signInEmail": "Sign in with Email address",
   "signInUsing": "Sign in with $1",
@@ -26,6 +27,11 @@
   "signUpOr": "Or...",
   "viewProfile": "View profile",
   "profileAndSettings": "Profile and settings",
+  "edit": "Edit",
+  "save": "Save",
+  "cancel": "Cancel",
+  "website": "Website",
+  "bio": "Bio",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
   "AUTH_USERNAME_POLICY": "Username should only contain alphanumberic characters.",
