--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -5,6 +5,7 @@
   "signIn": "로그인",
   "signUp": "계정 만들기",
   "username": "사용자 이름",
+  "name": "이름",
   "password": "비밀번호",
   "signInEmail": "이메일 주소로 로그인",
   "signInUsing": "$1으로 로그인",
@@ -26,6 +27,11 @@
   "signUpOr": "또는...",
   "viewProfile": "프로필 보기",
   "profileAndSettings": "프로필 및 설정",
+  "edit": "편집",
+  "save": "저장",
+  "cancel": "취소",
+  "website": "홈페이지",
+  "bio": "자기 소개",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
   "AUTH_USERNAME_POLICY": "사용자 이름은 알파벳과 숫자로만 구성되어야 합니다",
