Implement settings view

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -33,6 +33,13 @@
   "cancel": "Cancel",
   "website": "Website",
   "bio": "Bio",
+  "profile": "Profile",
+  "accountSettings": "Account Settings",
+  "settings": "Settings",
+  "generalSettings": "General",
+  "authMethods": "Authentication methods",
+  "notifications": "Notifications",
+  "account": "Account",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
   "AUTH_USERNAME_POLICY": "Username should only contain alphanumberic characters.",
