--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -33,6 +33,13 @@
   "cancel": "취소",
   "website": "홈페이지",
   "bio": "자기 소개",
+  "profile": "프로필",
+  "accountSettings": "계정 설정",
+  "generalSettings": "일반",
+  "settings": "설정",
+  "authMethods": "인증 수단",
+  "notifications": "알림",
+  "account": "계정",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
   "AUTH_USERNAME_POLICY": "사용자 이름은 알파벳과 숫자로만 구성되어야 합니다",
