Implement profile photo cropping. Resolves #35

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -41,6 +41,7 @@
   "notifications": "Notifications",
   "account": "Account",
   "language": "Language",
+  "setProfilePhoto": "Upload a new profile photo",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
   "AUTH_USERNAME_POLICY": "Username should only contain alphanumberic characters.",
