--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -41,6 +41,8 @@
   "notifications": "알림",
   "account": "계정",
   "language": "언어",
+  "unregister": "제거",
+  "register": "등록",
   "setProfilePhoto": "새 프로필 사진 올리기",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
