Implement entry creating form. Resolves #21.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -44,6 +44,14 @@
   "setProfilePhoto": "Upload a new profile photo",
   "unregister": "Delete",
   "register": "Register",
+  "newEntry": "Upload a new script",
+  "title": "Title",
+  "briefDescription": "Summary",
+  "description": "Description",
+  "script": "Script",
+  "tags": "Tags",
+  "seperatedByComma": "Tags are seperated by comma.",
+  "acceptsMarkdown": "You can use Markdown in here.",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
   "AUTH_USERNAME_POLICY": "Username should only contain alphanumberic characters.",
