--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -44,9 +44,18 @@
   "unregister": "제거",
   "register": "등록",
   "setProfilePhoto": "새 프로필 사진 올리기",
+  "newEntry": "새 스크립트 올리기",
+  "title": "제목",
+  "briefDescription": "짧은 설명",
+  "description": "설명",
+  "script": "스크립트",
+  "tags": "태그",
+  "seperatedByComma": "태그는 쉼표로 구분합니다.",
+  "acceptsMarkdown": "Markdown을 사용해 입력할 수 있습니다.",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
   "AUTH_USERNAME_POLICY": "사용자 이름은 알파벳과 숫자로만 구성되어야 합니다",
   "AUTH_USERNAME_EXISTS": "해당 사용자 이름이 이미 존재합니다",
-  "AUTH_PASSWORD_POLICY": "비밀번호는 6글자 이상이어야 합니다"
+  "AUTH_PASSWORD_POLICY": "비밀번호는 6글자 이상이어야 합니다",
+  "ENTRY_NAME_POLICY": "알파벳과 숫자, -로만 구성되어야 합니다"
 }
