Implement modifying local auth. Resolves #47.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -50,6 +50,9 @@
   "description": "Description",
   "script": "Script",
   "tags": "Tags",
+  "oldPassword": "Current password",
+  "newPassword": "New password",
+  "change": "Change",
   "seperatedByComma": "Tags are seperated by comma.",
   "acceptsMarkdown": "You can use Markdown in here.",
   "passwordCheck": "Verify password",
