--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -51,6 +51,9 @@
   "script": "스크립트",
   "tags": "태그",
   "passwordCheck": "비밀번호 다시 입력",
+  "oldPassword": "현재 비밀번호",
+  "newPassword": "새 비밀번호",
+  "change": "변경",
   "seperatedByComma": "태그는 쉼표로 구분합니다.",
   "acceptsMarkdown": "Markdown을 사용해 입력할 수 있습니다.",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
