Implement confirm dialog. Resolves #48.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -56,6 +56,10 @@
   "seperatedByComma": "Tags are seperated by comma.",
   "acceptsMarkdown": "You can use Markdown in here.",
   "passwordCheck": "Verify password",
+  "confirmMethodDelete": "Delete authentication method",
+  "confirmMethodDeleteDescription": "Are you sure you want to remove $1 authentication method?",
+  "yes": "Yes",
+  "no": "No",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
   "AUTH_USERNAME_POLICY": "Username should only contain alphanumberic characters.",
