--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -56,6 +56,10 @@
   "change": "변경",
   "seperatedByComma": "태그는 쉼표로 구분합니다.",
   "acceptsMarkdown": "Markdown을 사용해 입력할 수 있습니다.",
+  "confirmMethodDelete": "인증 수단 제거",
+  "confirmMethodDeleteDescription": "정말 $1 인증 수단을 제거하시겠습니까?",
+  "yes": "네",
+  "no": "아니요",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
   "AUTH_USERNAME_POLICY": "사용자 이름은 알파벳과 숫자로만 구성되어야 합니다",
