--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -60,6 +60,7 @@
   "confirmMethodDeleteDescription": "Are you sure you want to remove $1 authentication method?",
   "yes": "Yes",
   "no": "No",
+  "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
   "AUTH_USERNAME_POLICY": "Username should only contain alphanumberic characters.",
