--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -60,6 +60,7 @@
   "confirmMethodDeleteDescription": "정말 $1 인증 수단을 제거하시겠습니까?",
   "yes": "네",
   "no": "아니요",
+  "link": "주소",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
