Implement calling edit form

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -61,6 +61,7 @@
   "yes": "Yes",
   "no": "No",
   "link": "Link",
+  "delete": "Delete",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
