Properly handle deleted entries

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -56,8 +56,10 @@
   "seperatedByComma": "Tags are seperated by comma.",
   "acceptsMarkdown": "You can use Markdown in here.",
   "passwordCheck": "Verify password",
-  "confirmMethodDelete": "Delete authentication method",
+  "confirmMethodDelete": "Remove authentication method",
   "confirmMethodDeleteDescription": "Are you sure you want to remove $1 authentication method?",
+  "confirmEntryDelete": "Delete article",
+  "confirmEntryDeleteDescription": "Are you sure you want to delete '$1'?",
   "yes": "Yes",
   "no": "No",
   "link": "Link",
