--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -58,6 +58,8 @@
   "acceptsMarkdown": "Markdown을 사용해 입력할 수 있습니다.",
   "confirmMethodDelete": "인증 수단 제거",
   "confirmMethodDeleteDescription": "정말 $1 인증 수단을 제거하시겠습니까?",
+  "confirmEntryDelete": "게시글 삭제",
+  "confirmEntryDeleteDescription": "정말 '$1' 게시글을 삭제하시겠습니까?",
   "yes": "네",
   "no": "아니요",
   "link": "주소",
