Implement star / unstar. Resolves #53.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -65,6 +65,8 @@
   "link": "Link",
   "delete": "Delete",
   "retry": "Retry",
+  "star": "Star",
+  "unstar": "Unstar",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
