Improve script page and login

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -71,6 +71,7 @@
   "unstar": "Unstar",
   "post": "Post",
   "subject": "Subject",
+  "downloadRaw": "Download Script",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
