--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -71,6 +71,7 @@
   "unstar": "별 뽑기",
   "post": "올리기",
   "subject": "내용",
+  "downloadRaw": "스크립트 다운로드",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
