Implement data caching. Resolves #46

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -72,6 +72,10 @@
   "post": "Post",
   "subject": "Subject",
   "downloadRaw": "Download Script",
+  "createEntryTitle": "Create new entry",
+  "editEntryTitle": "Edit a entry",
+  "starredEntries": "Starred",
+  "authoredEntries": "Authored",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
