Implement search feature. Resolves #65

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -76,6 +76,7 @@
   "editEntryTitle": "Edit a entry",
   "starredEntries": "Starred",
   "authoredEntries": "Authored",
+  "searchNoResult": "No search results.",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
