Implement entry list or script selection

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -77,6 +77,13 @@
   "starredEntries": "Starred",
   "authoredEntries": "Authored",
   "searchNoResult": "No search results.",
+  "createNew": "Create new...",
+  "newScript": "New script",
+  "newList": "New list",
+  "listInsertTip": "You can press 'Add to list' button on the right of script to add to here.",
+  "tempSave": "Save and go back",
+  "submit": "Submit",
+  "tempSaveNote": "Saved data will be stored on your web browser.",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
