--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -77,6 +77,13 @@
   "starredEntries": "별 준 게시글",
   "authoredEntries": "작성한 게시글",
   "searchNoResult": "검색 결과가 없습니다.",
+  "createNew": "새로 만들기...",
+  "newScript": "새 스크립트",
+  "newList": "새 리스트",
+  "listInsertTip": "사이트를 탐색하다가 스크립트 오른쪽 위에 있는 '리스트에 추가'를 눌러 여기에 담을 수 있습니다.",
+  "tempSave": "임시 저장하고 돌아가기",
+  "submit": "보내기",
+  "tempSaveNote": "임시 저장된 데이터는 웹 브라우저에 저장됩니다.",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
