Implement generating list's script

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -71,7 +71,9 @@
   "unstar": "Unstar",
   "post": "Post",
   "subject": "Subject",
-  "downloadRaw": "Download Script",
+  "downloadRaw": "Download",
+  "scriptRunShortcut": "Run",
+  "scriptRunShortcutDesc": "Show pasteable code to run the script",
   "createEntryTitle": "Create new entry",
   "editEntryTitle": "Edit a entry",
   "starredEntries": "Starred",
