--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -71,7 +71,7 @@
   "unstar": "별 뽑기",
   "post": "올리기",
   "subject": "내용",
-  "downloadRaw": "스크립트 다운로드",
+  "downloadRaw": "다운로드",
   "editEntryTitle": "게시글 수정하기",
   "createEntryTitle": "게시글 작성하기",
   "starredEntries": "별 준 게시글",
@@ -83,6 +83,8 @@
   "listInsertTip": "사이트를 탐색하다가 스크립트 오른쪽 위에 있는 '리스트에 추가'를 눌러 여기에 담을 수 있습니다.",
   "tempSave": "임시 저장하고 돌아가기",
   "submit": "보내기",
+  "scriptRunShortcut": "실행하기",
+  "scriptRunShortcutDesc": "붙여넣어서 스크립트를 실행할 수 있는 코드 보여주기",
   "tempSaveNote": "임시 저장된 데이터는 웹 브라우저에 저장됩니다.",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
