Implement init and add/remove to list cart

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -85,6 +85,9 @@
   "listInsertTip": "You can press 'Add to list' button on the right of script to add to here.",
   "tempSave": "Save and go back",
   "submit": "Submit",
+  "listEdit": "Edit list",
+  "listCartAdd": "Add",
+  "listCartRemove": "Remove #$1",
   "tempSaveNote": "Saved data will be stored on your web browser.",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
