--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -86,6 +86,9 @@
   "scriptRunShortcut": "실행하기",
   "scriptRunShortcutDesc": "붙여넣어서 스크립트를 실행할 수 있는 코드 보여주기",
   "tempSaveNote": "임시 저장된 데이터는 웹 브라우저에 저장됩니다.",
+  "listEdit": "리스트 수정하기",
+  "listCartAdd": "추가",
+  "listCartRemove": "삭제 #$1",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
