Implement creating list entry

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -82,12 +82,16 @@
   "createNew": "Create new...",
   "newScript": "New script",
   "newList": "New list",
-  "listInsertTip": "You can press 'Add to list' button on the right of script to add to here.",
+  "listInsertTip": "You can press 'Add' button on the right of script to add to here.",
   "tempSave": "Save and go back",
   "submit": "Submit",
   "listEdit": "Edit list",
   "listCartAdd": "Add",
   "listCartRemove": "Remove #$1",
+  "listCartWrite": "Checkout list",
+  "listCartCancel": "Discard",
+  "confirmListCartDisable": "Discard List",
+  "confirmListCartDisableDescription": "Are you sure you want to discard the list you're making?",
   "tempSaveNote": "Saved data will be stored on your web browser.",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
