--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -80,7 +80,7 @@
   "createNew": "새로 만들기...",
   "newScript": "새 스크립트",
   "newList": "새 리스트",
-  "listInsertTip": "사이트를 탐색하다가 스크립트 오른쪽 위에 있는 '리스트에 추가'를 눌러 여기에 담을 수 있습니다.",
+  "listInsertTip": "스크립트 오른쪽 위에 있는 '추가'를 눌러 담을 수 있습니다.",
   "tempSave": "임시 저장하고 돌아가기",
   "submit": "보내기",
   "scriptRunShortcut": "실행하기",
@@ -89,6 +89,10 @@
   "listEdit": "리스트 수정하기",
   "listCartAdd": "추가",
   "listCartRemove": "삭제 #$1",
+  "listCartWrite": "이대로 리스트 만들기",
+  "listCartCancel": "버리기",
+  "confirmListCartDisable": "리스트 버리기",
+  "confirmListCartDisableDescription": "정말 만들고 있는 리스트를 버리시겠습니까?",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
