--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -90,9 +90,12 @@
   "listCartAdd": "추가",
   "listCartRemove": "삭제 #$1",
   "listCartWrite": "이대로 리스트 만들기",
+  "listCartEdit": "이대로 리스트 수정하기",
   "listCartCancel": "버리기",
   "confirmListCartDisable": "리스트 버리기",
-  "confirmListCartDisableDescription": "정말 만들고 있는 리스트를 버리시겠습니까?",
+  "confirmListCartDisableDescription": "정말 편집중인 리스트를 버리시겠습니까?",
+  "confirmListCartEnable": "리스트 버리기",
+  "confirmListCartEnableDescription": "정말 편집중인 리스트를 버리고 새로 여시겠습니까?",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
