--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -94,6 +94,7 @@
   "confirmListCartDisable": "Discard List",
   "confirmListCartDisableDescription": "Are you sure you want to discard the list you're making?",
   "tempSaveNote": "Saved data will be stored on your web browser.",
+  "FIELD_RESERVED": "Reserved word",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
   "AUTH_INVALID_PASSWORD": "Invalid password",
