--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -96,6 +96,7 @@
   "confirmListCartDisableDescription": "정말 편집중인 리스트를 버리시겠습니까?",
   "confirmListCartEnable": "리스트 버리기",
   "confirmListCartEnableDescription": "정말 편집중인 리스트를 버리고 새로 여시겠습니까?",
+  "FIELD_RESERVED": "예약된 단어입니다",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
   "AUTH_INVALID_PASSWORD": "비밀번호가 틀립니다",
