Implement disabling user

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -94,7 +94,11 @@
   "listCartCancel": "Discard",
   "confirmListCartDisable": "Discard List",
   "confirmListCartDisableDescription": "Are you sure you want to discard the list you're making?",
+  "confirmListCartDisable": "Discard List",
+  "confirmListCartDisableDescription": "Are you sure you want to discard the list you're making and load new?",
   "tempSaveNote": "Saved data will be stored on your web browser.",
+  "disable": "Disable",
+  "enable": "Enable",
   "FIELD_RESERVED": "Reserved word",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
