Implement sorting order selection. Resolves #72

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -100,6 +100,10 @@
   "disable": "Disable",
   "enable": "Enable",
   "comment": "Comment",
+  "orderTitle": "Sort",
+  "orderId": "Recently created",
+  "orderIdRev": "Least recently created",
+  "orderStar": "Most starred",
   "FIELD_RESERVED": "Reserved word",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
