--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -100,6 +100,10 @@
   "disable": "비활성화",
   "enable": "활성화",
   "comment": "댓글",
+  "orderTitle": "정렬",
+  "order_id": "최근 게시글부터",
+  "order_idRev": "오래된 게시글부터",
+  "order_star": "추천 많은 게시글부터",
   "FIELD_RESERVED": "예약된 단어입니다",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
