Implement changing and hiding email. Resolves #36

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -101,9 +101,12 @@
   "enable": "Enable",
   "comment": "Comment",
   "orderTitle": "Sort",
-  "orderId": "Recently created",
-  "orderIdRev": "Least recently created",
-  "orderStar": "Most starred",
+  "order_id": "Recently created",
+  "order_idRev": "Least recently created",
+  "order_star": "Most starred",
+  "emailTitle": "Email",
+  "showEmailName": "Show publicly",
+  "emailHidden": "Email hidden",
   "FIELD_RESERVED": "Reserved word",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_INVALID_USERNAME": "Invalid username",
