--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -104,6 +104,9 @@
   "order_id": "최근 게시글부터",
   "order_idRev": "오래된 게시글부터",
   "order_star": "추천 많은 게시글부터",
+  "emailTitle": "이메일",
+  "showEmailName": "전체 공개",
+  "emailHidden": "이메일 주소 숨겨짐",
   "FIELD_RESERVED": "예약된 단어입니다",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
   "AUTH_INVALID_USERNAME": "올바른 사용자 이름이 아닙니다",
