Implement reporting. Resolves #54.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -104,11 +104,14 @@
   "order_id": "Recently created",
   "order_idRev": "Least recently created",
   "order_star": "Most starred",
+  "order_star": "Most reported",
   "emailTitle": "Email",
   "showEmailName": "Show publicly",
   "emailHidden": "Email hidden",
   "requiresRoot": "Requires root permission",
   "requiresRootDescription": "Root permission is required to run this script",
+  "report": "Report",
+  "reportReset": "Reset Report Count",
   "FIELD_RESERVED": "Reserved word",
   "FIELD_TOO_LONG": "Value is too long",
   "AUTH_DISABLED_USER": "User has been disabled. Please contact the administrator.",
