--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -104,11 +104,14 @@
   "order_id": "최근 게시글부터",
   "order_idRev": "오래된 게시글부터",
   "order_star": "추천 많은 게시글부터",
+  "order_report": "신고 많은 게시글부터",
   "emailTitle": "이메일",
   "showEmailName": "전체 공개",
   "emailHidden": "이메일 주소 숨겨짐",
   "requiresRoot": "루트 권한 필요",
   "requiresRootDescription": "이 스크립트를 실행하려면 루트 권한이 필요합니다.",
+  "report": "신고하기",
+  "reportReset": "신고 카운트 초기화",
   "AUTH_DISABLED_USER": "계정이 정지되었습니다. 관리자에게 문의해 주세요.",
   "FIELD_RESERVED": "예약된 단어입니다",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
