--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -112,6 +112,8 @@
   "requiresRootDescription": "이 스크립트를 실행하려면 루트 권한이 필요합니다.",
   "report": "신고하기",
   "reportReset": "신고 카운트 초기화",
+  "reportThanks": "신고해주셔서 감사합니다.",
+  "savedDescription": "성공적으로 저장했습니다.",
   "AUTH_DISABLED_USER": "계정이 정지되었습니다. 관리자에게 문의해 주세요.",
   "FIELD_RESERVED": "예약된 단어입니다",
   "FIELD_TOO_LONG": "길이가 너무 깁니다",
